--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <div id="top" class="page" role="document">
       <header role="banner">
-        <h1>HTML5 Test Page</h1>
+        <h1>Matt's HTML5 Test Page</h1>
         <p>This is a test page filled with common HTML elements to be used to provide visual feedback whilst building CSS systems and frameworks.</p>
       </header>
       <nav role="navigation">
